/*
 *  Copyright (C) 2017 gyee authors
 *
 *  This file is part of the gyee library.
 *
 *  The gyee library is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  The gyee library is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with the gyee library.  If not, see <http://www.gnu.org/licenses/>.
 *
 */

//protoc -I . rpc.proto --go_out=plugins=grpc:.

syntax = "proto3";

package rpcpb;


service ApiService {
    rpc NodeInfo (NonParamsRequest) returns (NodeInfoResponse) {
    }

    rpc GetBlockByHash (GetBlockByHashRequest) returns (BlockResponse) {
    }

    rpc GetBlockByHeight (GetBlockByHeightRequest) returns (BlockResponse) {
    }

    rpc GetLastBlock (GetLastBlockRequest) returns (GetLastBlockResponse) {
    }

    rpc GetTxByHash (GetTxByHashRequest) returns (TransactionResponse) {
    }

    rpc GetAccountState (GetAccountStateRequest) returns (GetAccountStateResponse) {
    }
}

// Request message of non params.
message NonParamsRequest {
}

message BlockResponse {
    // block hash hex string
    string hash = 1;

    // block parent hash
    string parent_hash = 2;

    // block height
    uint64 height = 3;

    // block timestamp
    uint64 timestamp = 4;

    // block chain id
    uint32 chain_id = 5;

    // consensus root hex string
    string consensus_root = 6;
    // state root hex string
    string state_root = 7;
    // transactions root hex string
    string txs_root = 8;
    // receipts root hex string
    string receipts_root = 9;
}

message GetBlockByHashRequest {
    // block hash hex string
    string hash = 1;
}

message GetBlockByHeightRequest {
    // block height
    uint64 height = 1;
}

message GetLastBlockResponse {
    // block hash hex string
    string hash = 1;

    // block detail
    BlockResponse block = 2;
}

message GetLastBlockRequest {
}

message TransactionResponse {
    // tx hash hex string
    string hash = 1;

    // transaction nonce
    uint64 nonce = 2;

    // tx from address
    string from = 3;
    // tx recipient address
    string recipient = 4;

    // transaction amount decimal string
    string amount = 5;

}

message GetTxByHashRequest {
    // tx hash hex string
    string hash = 1;
}

message GetAccountStateResponse {
    // account address string
    string address = 1;

    // account nonce
    uint64 nonce = 2;
    // account balance decimal string
    string balance = 3;
}

message GetAccountStateRequest {
    // account address string
    string address = 1;
}

// Response message of node info.
message NodeInfoResponse {
    // the node ID.
    string id = 1;

    // the node version.
    uint32 version = 2;
}

// Admin Service
service AdminService {
    rpc Accounts (NonParamsRequest) returns (AccountsResponse) {
    }

    rpc NewAccount (NewAccountRequest) returns (NewAccountResponse) {
    }

    rpc UnlockAccount (UnlockAccountRequest) returns (UnlockAccountResponse) {
    }
    rpc LockAccount (LockAccountRequest) returns (LockAccountResponse) {
    }

    rpc SendTransaction (SendTransactionRequest) returns (SendTransactionResponse) {
    }
}

message AccountsResponse {
    // account address list
    repeated string addresses = 1;
}

message NewAccountRequest {
    string passphrase = 1;
}

message NewAccountResponse {
    string address = 1;
}

message UnlockAccountRequest {
    string address = 1;
    string passphrase = 2;
    uint64 duration = 3;
}

message UnlockAccountResponse {
    bool result = 1;
}

message LockAccountRequest {
    string address = 1;
}

message LockAccountResponse {
    bool result = 1;
}

message SendTransactionRequest {
    // tx from address hex string
    string from = 1;
    // tx to address hex string
    string to = 2;

    // tx amount decimal string
    string amount = 3;

    // account nonce
    uint64 nonce = 15;
}

message SendTransactionResponse {
    // tx hash hex string
    string hash = 1;
}
